<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slampibot</name>
  <version>6.0.0</version>
  <description>ROS2 Foxy Packages for slampibot</description>
  <maintainer email="edurobotailab@gmail.com">erail</maintainer>
  <license>Apache 2.0</license>
  <author email="leohycho@gamil.com">Leo Cho</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>slampibot_bringup</exec_depend>
  <exec_depend>slampibot_camera</exec_depend>
  <exec_depend>slampibot_description</exec_depend>
  <exec_depend>slampibot_cartographer</exec_depend>  
  <exec_depend>slampibot_navigation2</exec_depend>
  <exec_depend>slampibot_teleop</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
